Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
          Updated for next release

Wed Oct 27 12:01:05 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 0.8.3 released.

Mon Oct 25 14:47:22 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/CIDL/CodeGen/Basic.idl:

          Added a method to the base interface of an interface used
          in a facet. Method was supplied by Johnny Willemsen
          <jwillemsen at remedy dot nl> and uncovered a bug in
          executor code generation.

Sun Oct 24 12:44:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.cpp:
          Disabled a little bit more code with noevent

Sun Oct 24 11:33:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          COPI tests need an extension container which can't be deployed
          out of the box yet

Sat Oct 23 07:27:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/CoherentUpdater/Sender/CoherentUpdate_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender_exec.cpp:
          Regenerated using -Gexr and reimplemented

Fri Oct 22 11:44:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
          Removed export macro not needed

Fri Oct 22 11:36:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.cpp:
          Regenerated with -Gex -Gexr and added user code again
