@@ -1,28 +1,28 @@
 // -*- C++ -*-
 // $Id$
 
-#ifndef CIAO_SENDER_EXEC_H_
-#define CIAO_SENDER_EXEC_H_
+#ifndef CIAO_CFTLS_TEST_SENDER_EXEC_NYP61D_H_
+#define CIAO_CFTLS_TEST_SENDER_EXEC_NYP61D_H_
+
+#include /**/ "ace/pre.h"
 
 #include "CFTLS_Test_SenderEC.h"
-
-#include /**/ "Sender_exec_export.h"
 
 #if !defined (ACE_LACKS_PRAGMA_ONCE)
 # pragma once
 #endif /* ACE_LACKS_PRAGMA_ONCE */
 
+#include /**/ "Sender_exec_export.h"
 #include "tao/LocalObject.h"
 
 namespace CIAO_CFTLS_Test_Sender_Impl
 {
   class Sender_exec_i;
 
-  //============================================================
-  // StartHandler
-  //============================================================
-  class StartHandler :
-    public ACE_Event_Handler
+  /**
+   * StartHandler
+   */
+  class StartHandler : public ACE_Event_Handler
   {
   public:
     StartHandler (Sender_exec_i &callback);
@@ -31,11 +31,10 @@ namespace CIAO_CFTLS_Test_Sender_Impl
     Sender_exec_i &callback_;
   };
 
-  //============================================================
-  // UpdateTicker
-  //============================================================
-  class UpdateTicker :
-    public ACE_Event_Handler
+  /**
+   * UpdateTicker
+   */
+  class UpdateTicker : public ACE_Event_Handler
   {
   public:
     UpdateTicker (Sender_exec_i &callback);
@@ -46,6 +45,11 @@ namespace CIAO_CFTLS_Test_Sender_Impl
     CORBA::UShort last_iter_;
   };
 
+
+  /**
+   * Component Executor Implementation Class: Sender_exec_i
+   */
+
   class Sender_exec_i
     : public virtual Sender_Exec,
       public virtual ::CORBA::LocalObject
@@ -54,39 +58,68 @@ namespace CIAO_CFTLS_Test_Sender_Impl
     Sender_exec_i (void);
     virtual ~Sender_exec_i (void);
 
-    virtual ::CORBA::UShort iterations (void);
+    //@{
+    /** Supported operations and attributes. */
 
-    virtual void iterations (::CORBA::UShort iterations);
+    //@}
+
+    //@{
+    /** Component attributes and port operations. */
 
     virtual ::CORBA::UShort keys (void);
 
     virtual void keys (::CORBA::UShort keys);
 
+    virtual ::CORBA::UShort iterations (void);
+
+    virtual void iterations (::CORBA::UShort iterations);
+    //@}
+
+    //@{
+    /** Operations from Components::SessionComponent. */
     virtual void set_session_context (::Components::SessionContext_ptr ctx);
-
     virtual void configuration_complete (void);
-
     virtual void ccm_activate (void);
     virtual void ccm_passivate (void);
     virtual void ccm_remove (void);
+    //@}
 
+    //@{
+    /** User defined public operations. */
     void start (void);
     void run (void);
     void update_one (CORBA::UShort iter);
+    //@}
 
   private:
-    ::CFTLS_Test::CCM_Sender_Context_var context_;
-    ::CFTLS_Test::ContentFilteredTopicListenStateTestConnector::Updater_var updater_;
+    ::CFTLS_Test::CCM_Sender_Context_var ciao_context_;
 
+    //@{
+    /** Component attributes. */
+
+    ::CORBA::UShort keys_;
+
+    ::CORBA::UShort iterations_;
+    //@}
+
+    //@{
+    /** User defined members. */
     UpdateTicker *ticker_;
+    //@}
 
-    CORBA::UShort iterations_;
-    CORBA::UShort keys_;
- };
+    //@{
+    /** User defined private operations. */
+
+    //@}
+
+    /// Get the ACE_Reactor
+    ACE_Reactor* reactor (void);
+  };
 
   extern "C" SENDER_EXEC_Export ::Components::EnterpriseComponent_ptr
   create_CFTLS_Test_Sender_Impl (void);
 }
 
-#endif /* ifndef */
+#include /**/ "ace/post.h"
 
+#endif /* ifndef */
